- migrated items 10, 9 and 8